egg_recursive/tests/invalid/language/02-struct-lang.rs
use egg_recursive::*;

#[derive(Debug, Clone, PartialEq, Eq, Hash, PartialOrd, Ord, Language)]
pub struct StructLang {
    int: i64,
}

fn main() {
    println!("Hello, world!");
}
